--- a/app/src/main/res/layout/fragment_preference_category.xml
+++ b/app/src/main/res/layout/fragment_preference_category.xml
@@ -9,7 +9,8 @@
 
     <LinearLayout
         android:id="@+id/preference_category_ll"
-        style="@style/AppTheme.Toolbar.LinearLayout">
+        style="@style/AppTheme.Toolbar.LinearLayout"
+        tools:ignore="MissingConstraints">
 
     <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
@@ -18,7 +19,8 @@
             style="@style/AppTheme.Toolbar.Title"/>
 
         <TextView
-            android:fontFamily="sans-serif-light"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
             android:id="@+id/pref_category_btn_next"
             style="@style/AppTheme.Toolbar.TextLeft"
             android:text="@string/next"/>
@@ -32,272 +34,42 @@
     </LinearLayout>
 
     <TextView
-        android:fontFamily="sans-serif-light"
         android:id="@+id/select_what_you_like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="@string/select_what_you_like"
         android:textColor="@color/colorText"
-        android:textSize="14sp"
+        android:textSize="16sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/preference_category_ll" />
 
-    <ImageView
-        android:id="@+id/pref_city_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:src="@drawable/ic_pref_city"
-        app:layout_constraintEnd_toStartOf="@+id/pref_sport_btn"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/select_what_you_like" />
-
-    <TextView
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintRight_toRightOf="@id/pref_city_btn"
-        app:layout_constraintLeft_toLeftOf="@id/pref_city_btn"
-        android:textColor="@color/colorText"
-        android:textSize="15sp"
-        android:layout_marginTop="8dp"
-        android:text="@string/my_city"
-        app:layout_constraintTop_toBottomOf="@id/pref_city_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:id="@+id/pref_sport_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:src="@drawable/ic_pref_sport"
-        app:layout_constraintEnd_toStartOf="@+id/pref_music_btn"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/pref_city_btn"
-        app:layout_constraintTop_toBottomOf="@id/select_what_you_like" />
-
-    <TextView
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintLeft_toLeftOf="@id/pref_sport_btn"
-        app:layout_constraintRight_toRightOf="@id/pref_sport_btn"
-        android:textColor="@color/colorText"
-        android:textSize="15sp"
-        android:layout_marginTop="8dp"
-        android:text="@string/sports"
-        app:layout_constraintTop_toBottomOf="@id/pref_city_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:id="@+id/pref_music_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:src="@drawable/ic_pref_music"
-        app:layout_constraintEnd_toStartOf="@+id/pref_esport_btn"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/pref_sport_btn"
-        app:layout_constraintTop_toBottomOf="@id/select_what_you_like" />
-
-    <TextView
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintRight_toRightOf="@id/pref_music_btn"
-        app:layout_constraintLeft_toLeftOf="@id/pref_music_btn"
-        android:textColor="@color/colorText"
-        android:textSize="15sp"
-        android:layout_marginTop="8dp"
-        android:text="@string/music"
-        app:layout_constraintTop_toBottomOf="@id/pref_city_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:id="@+id/pref_esport_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:src="@drawable/ic_pref_esport"
+    <GridView
+        android:scrollbars="none"
+        android:id="@+id/category_gv"
+        tools:listitem="@layout/item_category"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:paddingHorizontal="16dp"
+        android:horizontalSpacing="16dp"
+        android:gravity="center"
+        android:numColumns="3"
+        android:verticalSpacing="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/pref_music_btn"
-        app:layout_constraintTop_toBottomOf="@id/select_what_you_like" />
-
-    <TextView
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintLeft_toLeftOf="@id/pref_esport_btn"
-        app:layout_constraintRight_toRightOf="@id/pref_esport_btn"
-        android:textColor="@color/colorText"
-        android:textSize="15sp"
-        android:layout_marginTop="8dp"
-        android:text="@string/esports"
-        app:layout_constraintTop_toBottomOf="@id/pref_city_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:id="@+id/pref_youtube_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="160dp"
-        android:src="@drawable/ic_pref_youtube"
-        app:layout_constraintEnd_toStartOf="@+id/pref_sport_btn"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/select_what_you_like" />
+        app:layout_constraintTop_toBottomOf="@id/select_what_you_like"
+        />
 
-    <TextView
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintRight_toRightOf="@id/pref_youtube_btn"
-        app:layout_constraintLeft_toLeftOf="@id/pref_youtube_btn"
-        android:textColor="@color/colorText"
-        android:textSize="15sp"
-        android:layout_marginTop="8dp"
-        android:text="@string/youtube"
-        app:layout_constraintTop_toBottomOf="@id/pref_youtube_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:id="@+id/pref_religion_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="160dp"
-        android:src="@drawable/ic_pref_religion"
-        app:layout_constraintEnd_toStartOf="@+id/pref_culture_btn"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/pref_youtube_btn"
-        app:layout_constraintTop_toBottomOf="@id/select_what_you_like" />
-
-    <TextView
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintLeft_toLeftOf="@id/pref_religion_btn"
-        app:layout_constraintRight_toRightOf="@id/pref_religion_btn"
-        android:textColor="@color/colorText"
-        android:textSize="15sp"
-        android:layout_marginTop="8dp"
-        android:text="@string/religions"
-        app:layout_constraintTop_toBottomOf="@id/pref_religion_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:id="@+id/pref_culture_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="160dp"
-        android:src="@drawable/ic_pref_culture"
-        app:layout_constraintEnd_toStartOf="@+id/pref_esport_btn"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/pref_religion_btn"
-        app:layout_constraintTop_toBottomOf="@id/select_what_you_like" />
-
-    <TextView
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintRight_toRightOf="@id/pref_culture_btn"
-        app:layout_constraintLeft_toLeftOf="@id/pref_culture_btn"
-        android:textColor="@color/colorText"
-        android:textSize="15sp"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:text="@string/culture_n_amp_loisirs"
-        app:layout_constraintTop_toBottomOf="@id/pref_culture_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:id="@+id/pref_movie_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="160dp"
-        android:src="@drawable/ic_pref_movie"
+    <ProgressBar
+        android:id="@+id/category_pb"
+        android:visibility="visible"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/pref_culture_btn"
-        app:layout_constraintTop_toBottomOf="@id/select_what_you_like" />
-
-    <TextView
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintLeft_toLeftOf="@id/pref_movie_btn"
-        app:layout_constraintRight_toRightOf="@id/pref_movie_btn"
-        android:textColor="@color/colorText"
-        android:textSize="15sp"
-        android:gravity="center"
-        android:layout_marginTop="8dp"
-        android:text="@string/films_n_amp_series"
-        app:layout_constraintTop_toBottomOf="@id/pref_movie_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:id="@+id/pref_shopping_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="280dp"
-        android:src="@drawable/ic_pref_shopping"
-        app:layout_constraintEnd_toStartOf="@+id/pref_holiday_btn"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/select_what_you_like" />
-
-    <TextView
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintRight_toRightOf="@id/pref_shopping_btn"
-        app:layout_constraintLeft_toLeftOf="@id/pref_shopping_btn"
-        android:textColor="@color/colorText"
-        android:textSize="15sp"
-        android:layout_marginTop="8dp"
-        android:text="@string/shopping"
-        app:layout_constraintTop_toBottomOf="@id/pref_shopping_btn"
+        app:layout_constraintTop_toBottomOf="@id/select_what_you_like"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:id="@+id/pref_holiday_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="280dp"
-        android:src="@drawable/ic_pref_holiday"
-        app:layout_constraintEnd_toStartOf="@+id/pref_music_btn"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/pref_shopping_btn"
-        app:layout_constraintTop_toBottomOf="@id/select_what_you_like" />
-
-    <TextView
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintLeft_toLeftOf="@id/pref_holiday_btn"
-        app:layout_constraintRight_toRightOf="@id/pref_holiday_btn"
-        android:textColor="@color/colorText"
-        android:textSize="15sp"
-        android:layout_marginTop="8dp"
-        android:text="@string/holidays"
-        app:layout_constraintTop_toBottomOf="@id/pref_holiday_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:id="@+id/pref_calendar_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="280dp"
-        android:src="@drawable/ic_pref_calendar_to_follow"
-        app:layout_constraintEnd_toStartOf="@+id/pref_esport_btn"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/pref_holiday_btn"
-        app:layout_constraintTop_toBottomOf="@id/select_what_you_like" />
-
-    <TextView
-        android:fontFamily="sans-serif-light"
-        app:layout_constraintRight_toRightOf="@id/pref_calendar_btn"
-        app:layout_constraintLeft_toLeftOf="@id/pref_calendar_btn"
-        android:textColor="@color/colorText"
-        android:textSize="15sp"
-        android:layout_marginTop="8dp"
-        android:gravity="center"
-        android:text="@string/calendrier_n_interessant"
-        app:layout_constraintTop_toBottomOf="@id/pref_calendar_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
