--- a/app/src/main/res/layout/adapter_pref_sub_category_card.xml
+++ b/app/src/main/res/layout/adapter_pref_sub_category_card.xml
@@ -1,36 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="10dp"
     android:padding="8dp"
     android:layout_margin="8dp"
-    android:background="@color/colorBackground"
-    android:elevation="4dp"
+    app:strokeWidth="1dp"
+    app:strokeColor="@color/colorElevated"
+    app:cardBackgroundColor="@color/colorBackground"
     android:layout_width="match_parent"
+    app:cardElevation="4dp"
     android:layout_height="wrap_content"
     tools:targetApi="lollipop">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@drawable/sha"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/pref_sub_category_title_category"
+        <ImageView
+            android:id="@+id/subcategory_iv"
+            android:scaleType="centerCrop"
+            android:src="@drawable/audiance"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/card_line"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="75dp"/>
+
+        <TextView
+            app:layout_constraintBottom_toBottomOf="@id/card_line"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/pref_sub_category_title_category"
             android:padding="24dp"
             android:textColor="@android:color/white"
             android:textSize="20sp"
             android:textAllCaps="true"
+            android:textStyle="bold"
             android:shadowColor="@android:color/black"
             android:scaleX="1"
             android:scaleY="1"
             android:shadowRadius="1.5"
             tools:text="Sports"
             app:layout_constraintBottom_toTopOf="@id/card_line"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"/>
 
         <TextView
@@ -53,4 +68,4 @@
 
 
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
