--- a/app/src/main/res/layout/adapter_search_explore.xml
+++ b/app/src/main/res/layout/adapter_search_explore.xml
@@ -2,45 +2,47 @@
 
 
 <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_marginTop="8dp"
+    android:layout_marginTop="4dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@drawable/sha"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/search_explore_category"
+    <ImageView
+        android:id="@+id/search_explore_category_iv"
+        android:src="@drawable/category_sport"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:scaleType="centerCrop"
+        app:layout_constraintBottom_toTopOf="@id/search_explore_rv"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="75dp"/>
+
+    <TextView
+        android:shadowColor="@android:color/black"
+        android:textColor="@android:color/white"
+        tools:text="SPORT"
+        android:textStyle="bold"
+        android:textAllCaps="true"
         android:padding="24dp"
         android:textSize="20sp"
         android:shadowRadius="1.5"
         android:scaleY="1"
+        app:layout_constraintBottom_toTopOf="@id/search_explore_rv"
         android:scaleX="1"
-        android:shadowColor="@android:color/black"
-        android:textColor="@android:color/white"
-        tools:text="CULTURE"
-        android:textAllCaps="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-    <ImageView
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="@id/search_explore_category"
-        android:id="@+id/search_explore_see_subcategory"
+        android:id="@+id/search_explore_category"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/search_explore_category"
-        android:paddingHorizontal="16dp"
-        android:paddingVertical="4dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         android:src="@drawable/ic_keyboard_arrow_down_black_24dp"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"/>
 
 
     <androidx.recyclerview.widget.RecyclerView
-        android:paddingTop="8dp"
+        android:clipToPadding="false"
         android:background="@color/colorBackground"
         android:id="@+id/search_explore_rv"
         tools:listitem="@layout/item_search_explore"
