--- a/app/src/main/res/layout/fragment_preference_sub_category.xml
+++ b/app/src/main/res/layout/fragment_preference_sub_category.xml
@@ -24,10 +24,8 @@
         <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
                 <TextView
-                    style="@style/AppTheme.Toolbar.Title"
-                    android:text="@string/preferrence" />
-
-                <TextView
+                    android:textStyle="bold"
+                    android:textColor="@color/colorAccent"
                     android:fontFamily="sans-serif-light"
                     android:id="@+id/pref_sub_category_btn_done"
                     style="@style/AppTheme.Toolbar.TextLeft"
@@ -50,11 +48,15 @@
         </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
+
+                android:orientation="horizontal"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:background="@color/colorBackground"
                 android:paddingHorizontal="8dp"
                 android:clipToPadding="false"
-                android:layout_marginVertical="8dp"
-                tools:listitem="@layout/item_pref_sub_category_chip"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="4dp"
+                tools:listitem="@layout/item_subcategory_category_removal"
                 android:id="@+id/pref_sub_category_rv_chips"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -67,20 +69,20 @@
                 android:id="@+id/how_much_do_you_like_it"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="16dp"
                 android:text="@string/how_much_do_you_like_it"
                 android:textColor="@color/colorText"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/pref_sub_category_rv_chips" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:background="@color/colorBackground"
-                android:padding="16dp"
+                android:paddingHorizontal="16dp"
+                android:paddingVertical="8dp"
                 tools:listitem="@layout/adapter_pref_sub_category_card"
                 android:id="@+id/pref_sub_category_card_rv"
-                android:layout_marginTop="12dp"
                 app:layout_constraintTop_toBottomOf="@id/how_much_do_you_like_it"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
