--- a/app/src/main/res/layout/fragment_preference_suggestion.xml
+++ b/app/src/main/res/layout/fragment_preference_suggestion.xml
@@ -30,6 +30,8 @@
         <TextView
             android:fontFamily="sans-serif-light"
             android:id="@+id/suggestion_ok_btn"
+            android:textStyle="bold"
+            android:textColor="@color/colorAccent"
             style="@style/AppTheme.Toolbar.TextLeft"
             android:text="@string/done" />
 
@@ -40,15 +42,14 @@
         </LinearLayout>
 
         <TextView
-            android:fontFamily="sans-serif-light"
             android:layout_gravity="center"
             android:id="@+id/select_what_you_like"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="16dp"
             android:text="@string/we_found_some_account_you_might_like"
             android:textColor="@color/colorText"
-            android:textSize="14sp"
+            android:textSize="16sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/preference_suggestions_ll" />
@@ -57,7 +58,6 @@
             android:padding="16dp"
             tools:listitem="@layout/adapter_suggestion_card"
             android:id="@+id/suggestion_card_rv"
-            android:layout_marginTop="12dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
