--- a/app/src/main/res/layout/item_pref_sub_category.xml
+++ b/app/src/main/res/layout/item_pref_sub_category.xml
@@ -7,7 +7,6 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
-        android:fontFamily="sans-serif-light"
         android:id="@+id/pref_sub_category_title_sub_category"
         android:paddingVertical="16dp"
         android:layout_marginStart="24dp"
@@ -29,20 +28,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:isb_max="3"
+        app:isb_max="5"
         app:isb_min="0"
         app:isb_progress="1"
         app:isb_seek_smoothly="true"
         app:isb_ticks_count="4"
-        app:isb_thumb_color="@color/colorAccent"
+        app:isb_thumb_color="@android:color/darker_gray"
         app:isb_thumb_size="10dp"
         app:isb_show_indicator="rounded_rectangle"
-        app:isb_indicator_color="@color/colorStartGradient"
+        app:isb_indicator_color="#CD7676"
         app:isb_indicator_text_color="@android:color/white"
         app:isb_indicator_text_size="14sp"
         app:isb_track_background_color="@android:color/darker_gray"
         app:isb_track_background_size="13dp"
-        app:isb_track_progress_color="@color/colorStartGradient"
+        app:isb_track_progress_color="#CD7676"
         app:isb_track_progress_size="5dp"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
