--- a/app/src/main/res/layout/fragment_preference_suggestion.xml
+++ b/app/src/main/res/layout/fragment_preference_suggestion.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootSuggestions"
     android:layout_width="match_parent"
-    android:background="@android:color/white"
+    android:background="@color/colorBackground"
     android:layout_height="match_parent"
     tools:context=".view.loginFlow.PreferenceSuggestion">
 
