--- a/app/src/main/res/layout/fragment_search_top.xml
+++ b/app/src/main/res/layout/fragment_search_top.xml
@@ -17,4 +17,13 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"/>
 
+    <ProgressBar
+        android:id="@+id/search_top_pb"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
