--- a/app/src/main/res/layout-sw380dp/item_timenote.xml
+++ b/app/src/main/res/layout-sw380dp/item_timenote.xml
@@ -22,7 +22,9 @@
 
     <TextView
         android:id="@+id/timenote_username"
-        android:layout_width="0dp"
+        app:layout_constrainedWidth="true"
+        android:layout_width="wrap_content"
+        app:layout_constraintHorizontal_bias="0"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:textColor="@color/colorText"
@@ -36,7 +38,9 @@
 
     <TextView
         android:id="@+id/timenote_place"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintHorizontal_bias="0"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:ellipsize="end"
