--- a/app/src/main/res/layout-sw380dp/item_timenote_root.xml
+++ b/app/src/main/res/layout-sw380dp/item_timenote_root.xml
@@ -19,6 +19,7 @@
         android:id="@+id/timenote_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintHorizontal_bias="0"
         android:background="@drawable/gradient_timenote_top"
         android:paddingHorizontal="16dp"
         android:paddingTop="16dp"
@@ -28,8 +29,8 @@
         android:shadowDy="1"
         android:shadowRadius="1.5"
         android:maxLines="1"
+        app:layout_constraintEnd_toEndOf="parent"
         android:ellipsize="end"
-        tools:text="Beach Party"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
         android:textSize="18sp"
@@ -172,6 +173,7 @@
             android:textSize="14sp"
             android:textColor="@color/colorAccent"
             android:layout_marginStart="16dp"
+
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
