--- a/app/src/main/res/layout-sw380dp/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout-sw380dp/fragment_detailed_fragment.xml
@@ -1,164 +1,201 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.homeFlow.DetailedTimenote">
 
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    <LinearLayout
-        android:id="@+id/detailed_timenote_ll"
-        style="@style/AppTheme.Toolbar.LinearLayout"
-        tools:ignore="MissingConstraints">
 
-        <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
+        <LinearLayout
+            android:id="@+id/detailed_timenote_ll"
+            style="@style/AppTheme.Toolbar.LinearLayout"
+            tools:ignore="MissingConstraints">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
-                <TextView
-                    android:layout_height="wrap_content"
-                    android:layout_width="wrap_content"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    android:fontFamily="sans-serif-light"
-                    android:drawableStart="@drawable/ic_back_thin"
-                    android:id="@+id/detailed_timenote_btn_back"
-                    android:text="" />
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-            <TextView
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/detailed_timenote_username"
-                android:textColor="@color/colorText"
-                android:textSize="17sp"/>
+                    <TextView
+                        android:id="@+id/detailed_timenote_btn_back"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawableStart="@drawable/ic_back_thin"
+                        android:fontFamily="sans-serif-light"
+                        android:text=""
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-                <ImageView
-                    android:id="@+id/detailed_timenote_pic_user"
-                    android:layout_marginEnd="8dp"
-                    app:layout_constraintEnd_toStartOf="@id/detailed_timenote_username"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"/>
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="16dp"
+                        android:gravity="center"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@id/detailed_timenote_btn_more"
+                        app:layout_constraintStart_toEndOf="@id/detailed_timenote_btn_back"
+                        app:layout_constraintTop_toTopOf="parent">
 
-                <ImageView
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginEnd="8dp"
-                    android:id="@+id/detailed_timenote_btn_more"
-                    android:src="@drawable/ic_more_vert_black_profile_24dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                        <ImageView
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            android:src="@drawable/audiance"
+                            android:id="@+id/detailed_timenote_pic_user"
+                            android:layout_width="36dp"
+                            android:layout_height="36dp" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                        <TextView
+                            app:layout_constraintTop_toTopOf="@id/detailed_timenote_pic_user"
+                            app:layout_constraintStart_toEndOf="@id/detailed_timenote_pic_user"
+                            tools:text="Samuel"
+                            android:id="@+id/detailed_timenote_username"
+                            android:layout_width="wrap_content"
+                            android:layout_marginStart="8dp"
+                            android:layout_height="wrap_content"
+                            android:ellipsize="end"
+                            app:layout_constraintBottom_toTopOf="@id/detailed_timenote_address"
+                            android:maxLines="1"
+                            app:layout_constrainedWidth="true"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintHorizontal_bias="0"
+                            android:textColor="@color/colorText"
+                            android:textSize="14sp" />
 
-        </androidx.appcompat.widget.Toolbar>
+                        <TextView
+                            android:id="@+id/detailed_timenote_address"
+                            android:maxLines="1"
+                            app:layout_constraintHorizontal_bias="0"
+                            android:fontFamily="sans-serif-light"
+                            android:textSize="12sp"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:ellipsize="end"
+                            app:layout_constrainedWidth="true"
+                            app:layout_constraintTop_toBottomOf="@id/detailed_timenote_username"
+                            tools:text="14 avenue de la marée chaussée 18009 Marseille France"
+                            android:textColor="@color/colorText"
+                            android:layout_marginStart="8dp"
+                            app:layout_constraintBottom_toBottomOf="@id/detailed_timenote_pic_user"
+                            app:layout_constraintStart_toEndOf="@id/detailed_timenote_pic_user"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"/>
 
-        <TextView style="@style/AppTheme.Divider.Toolbar"/>
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </LinearLayout>
+                    <ImageView
+                        android:id="@+id/detailed_timenote_btn_more"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="8dp"
+                        android:src="@drawable/ic_more_vert_black_profile_24dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </androidx.appcompat.widget.Toolbar>
+
+            <TextView style="@style/AppTheme.Divider.Toolbar" />
+
+        </LinearLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <ScrollView
         android:id="@+id/detailed_timenote_scc"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_detailed_comment_ll"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/detailed_timenote_ll"
-        app:layout_constraintBottom_toTopOf="@+id/fragment_detailed_comment_ll"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        app:layout_constraintTop_toBottomOf="@id/detailed_timenote_ll">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
             <include
-                app:layout_constraintTop_toTopOf="parent"
                 android:id="@+id/timenote_root"
-                layout="@layout/item_timenote_root"/>
+                layout="@layout/item_timenote_root"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_marginBottom="68dp"
-        android:id="@+id/detailed_timenote_sv"
-        android:visibility="visible"
-        android:fillViewport="true"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/timenote_root"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            <androidx.core.widget.NestedScrollView
+                android:id="@+id/detailed_timenote_sv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="68dp"
+                android:fillViewport="true"
+                android:visibility="visible"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/timenote_root">
 
-        <androidx.recyclerview.widget.RecyclerView
-            tools:listitem="@layout/item_comment"
-            android:id="@+id/detailed_timenote_comments_rv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/detailed_timenote_comments_rv"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    tools:listitem="@layout/item_comment" />
 
 
-</androidx.core.widget.NestedScrollView>
+            </androidx.core.widget.NestedScrollView>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@color/colorBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
-        app:layout_anchorGravity="bottom"
-        app:layout_anchor="@id/detailed_timenote_scc">
+        android:background="@color/colorBackground"
+        app:layout_anchor="@id/detailed_timenote_scc"
+        app:layout_anchorGravity="bottom">
 
-    <LinearLayout
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:id="@+id/fragment_detailed_comment_ll"
-        android:layout_marginHorizontal="12dp"
-        android:layout_marginBottom="12dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:background="@drawable/circle_black_stroke_background_comment"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        <LinearLayout
+            android:id="@+id/fragment_detailed_comment_ll"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="12dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/circle_black_stroke_background_comment"
+            android:gravity="center"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:background="@color/colorBackground"
-            android:layout_marginStart="12dp"
-            android:layout_marginVertical="12dp"
-            android:fontFamily="sans-serif-light"
-            android:textSize="13sp"
-            android:hint="@string/add_a_comment"
-            android:maxLines="2"
-            android:id="@+id/comments_edittext"
-            android:layout_weight="10"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            <EditText
+                android:id="@+id/comments_edittext"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginVertical="12dp"
+                android:layout_marginStart="12dp"
+                android:layout_weight="10"
+                android:background="@color/colorBackground"
+                android:fontFamily="sans-serif-light"
+                android:hint="@string/add_a_comment"
+                android:maxLines="2"
+                android:textSize="13sp" />
 
-        <ImageView
-            android:id="@+id/timenote_detailed_send_comment"
-            android:src="@drawable/ic_round_send_24"
-            android:layout_weight="1"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"/>
+            <ImageView
+                android:id="@+id/timenote_detailed_send_comment"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/ic_round_send_24" />
 
-    </LinearLayout>
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
