--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -129,6 +129,16 @@
                 android:orientation="vertical">
 
                 <TextView
+                    android:visibility="gone"
+                    android:textColor="@color/colorText"
+                    android:textSize="14sp"
+                    android:layout_marginHorizontal="8dp"
+                    android:layout_marginTop="16dp"
+                    android:text="UPCOMING"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+                <TextView
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:id="@+id/home_nothing_to_display"
