--- a/app/src/main/res/layout/fragment_my_profile.xml
+++ b/app/src/main/res/layout/fragment_my_profile.xml
@@ -26,8 +26,17 @@
                 tools:layout_editor_absoluteX="16dp">
 
                 <TextView
+                    tools:text="samuel"
+                    android:drawablePadding="2dp"
+                    android:layout_marginHorizontal="16dp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:layout_width="0dp"
                     android:id="@+id/profile_name_toolbar"
-                    style="@style/AppTheme.Toolbar.Title"
+                    android:gravity="center"
+                    android:textSize="16sp"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/colorText"
                     app:layout_constraintBottom_toTopOf="@id/profile_location"
                     app:layout_constraintEnd_toStartOf="@id/profile_settings_btn"
                     app:layout_constraintStart_toEndOf="@id/profile_notif_btn"
