--- a/app/src/main/res/layout/fragment_preference_suggestion.xml
+++ b/app/src/main/res/layout/fragment_preference_suggestion.xml
@@ -42,11 +42,11 @@
         </LinearLayout>
 
         <TextView
-            android:layout_gravity="center"
             android:id="@+id/select_what_you_like"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:gravity="center"
             android:text="@string/we_found_some_account_you_might_like"
             android:textColor="@color/colorText"
             android:textSize="16sp"
