--- a/app/src/main/res/layout/item_suggestion.xml
+++ b/app/src/main/res/layout/item_suggestion.xml
@@ -8,12 +8,13 @@
     xmlns:fancy="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:src="@drawable/beach"
         android:id="@+id/suggestion_imageview"
         android:layout_marginVertical="8dp"
         android:layout_marginStart="26dp"
         android:layout_width="44dp"
         android:layout_height="44dp"
+        android:background="@drawable/border_pic_profile"
+        android:padding="0.6dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
