--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -23,11 +23,15 @@
         android:fontFamily="sans-serif-light"
         android:id="@+id/name_user"
         android:drawablePadding="2dp"
-        android:gravity="center"
         android:textColor="@color/colorText"
-        tools:text="samo23"
+        app:layout_constraintHorizontal_bias="0"
         android:textSize="15sp"
-        android:layout_marginStart="15dp"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintEnd_toStartOf="@id/user_unfollow"
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:layout_marginStart="14dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toTopOf="@id/givenName"
         app:layout_constraintStart_toEndOf="@id/user_imageview"
         android:layout_width="wrap_content"
@@ -35,14 +39,19 @@
         app:layout_constraintTop_toTopOf="@id/user_imageview" />
 
     <TextView
-        tools:text="Samuel Zaffran"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="14dp"
         android:textSize="13sp"
+        app:layout_constraintHorizontal_bias="0"
         android:textColor="@android:color/darker_gray"
         app:layout_constraintTop_toBottomOf="@id/name_user"
         android:id="@+id/givenName"
+        android:layout_marginEnd="16dp"
         app:layout_constraintBottom_toBottomOf="@id/user_imageview"
+        app:layout_constraintEnd_toStartOf="@id/user_unfollow"
         app:layout_constraintStart_toEndOf="@id/user_imageview"
+        android:maxLines="1"
+        android:ellipsize="end"
+        app:layout_constrainedWidth="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
@@ -65,23 +74,4 @@
         app:layout_constraintBottom_toBottomOf="@id/user_imageview"
         app:layout_constraintEnd_toEndOf="parent" />
 
-    <mehdi.sakout.fancybuttons.FancyButton
-        android:id="@+id/user_remove"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:paddingHorizontal="12dp"
-        android:paddingVertical="2dp"
-        android:visibility="gone"
-        app:fb_borderColor="@android:color/darker_gray"
-        app:fb_borderWidth="1dp"
-        app:fb_defaultColor="@android:color/transparent"
-        app:fb_radius="5dp"
-        android:layout_marginEnd="16dp"
-        app:fb_text="@string/remove"
-        app:fb_textColor="@android:color/darker_gray"
-        app:layout_constraintTop_toTopOf="@id/user_imageview"
-        app:layout_constraintBottom_toBottomOf="@id/user_imageview"
-        app:layout_constraintEnd_toEndOf="parent" />
-    
 </androidx.constraintlayout.widget.ConstraintLayout>
