--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#5A599D</color>
     <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#ffcc33</color>
+    <color name="colorAccent">#FFC107</color>
     <color name="colorText">#000000</color>
     <color name="colorTextSecondary">#5A599D</color>
     <color name="colorTextThirdly">#4A90E2</color>
@@ -11,7 +11,7 @@
     <color name="colorAccentCustom">#63BFD2</color>
     <color name="colorStartGradient">#09539d</color>
     <color name="colorEndGradient">#892981</color>
-    <color name="colorYellow">#ffcc33</color>
+    <color name="colorYellow">#FFC107</color>
     <color name="colorBackground">#FFFFFF</color>
     <color name="colorToolbar">#FFFFFF</color>
     <color name="colorDivider">#60000000</color>
