--- a/app/src/main/res/layout-sw380dp/fragment_preview_timenote_created.xml
+++ b/app/src/main/res/layout-sw380dp/fragment_preview_timenote_created.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:fancy="http://schemas.android.com/apk/res-auto"
-    android:background="@color/colorBackground"
-    tools:context=".view.createTimenoteFlow.PreviewTimenoteCreated">
+    android:background="@color/colorBackground">
 
     <LinearLayout
         android:id="@+id/preview_created_timenote_ll"
