--- a/app/src/main/res/layout/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout/fragment_detailed_fragment.xml
@@ -41,10 +41,11 @@
                     app:layout_constraintTop_toTopOf="parent">
 
                     <ImageView
+                        android:background="@drawable/border_pic_profile"
+                        android:padding="0.6dp"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        android:src="@drawable/audiance"
                         android:id="@+id/detailed_timenote_pic_user"
                         android:layout_width="36dp"
                         android:layout_height="36dp" />
