--- a/app/src/main/res/layout/item_pref_sub_category.xml
+++ b/app/src/main/res/layout/item_pref_sub_category.xml
@@ -11,7 +11,12 @@
         android:paddingVertical="16dp"
         android:layout_marginStart="24dp"
         tools:text="Football"
+        app:layout_constrainedWidth="true"
+        app:layout_constraintHorizontal_bias="0"
+        android:maxLines="1"
+        android:ellipsize="end"
         android:textSize="16sp"
+        app:layout_constraintEnd_toStartOf="@id/pref_sub_category_seekbar"
         android:textColor="@color/colorText"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +29,7 @@
         android:id="@+id/pref_sub_category_seekbar"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:layout_marginEnd="48dp"
+        android:layout_marginEnd="24dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
