--- a/app/src/main/res/layout/item_top.xml
+++ b/app/src/main/res/layout/item_top.xml
@@ -7,7 +7,8 @@
     xmlns:fancy="http://schemas.android.com/apk/res-auto">
 
     <ImageView
-        android:src="@drawable/beach"
+        android:background="@drawable/border_pic_profile"
+        android:padding="0.6dp"
         android:id="@+id/suggestion_imageview"
         android:layout_marginVertical="8dp"
         android:layout_marginStart="26dp"
@@ -18,11 +19,15 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintEnd_toStartOf="@id/suggestion_follow_btn"
+        app:layout_constrainedWidth="true"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:fontFamily="sans-serif-light"
         android:id="@+id/suggestion_name_user"
         android:gravity="center"
         android:textColor="@color/colorText"
-        tools:text="Ligue 1"
         android:textSize="17sp"
         android:layout_marginStart="15dp"
         app:layout_constraintStart_toEndOf="@id/suggestion_imageview"
