--- a/app/src/main/res/layout/fragment_nearby_filters.xml
+++ b/app/src/main/res/layout/fragment_nearby_filters.xml
@@ -14,23 +14,59 @@
 
         <androidx.appcompat.widget.Toolbar style="@style/AppTheme.Toolbar">
 
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
             <TextView
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorText"
+                android:textSize="17sp"
                 android:id="@+id/nearby_filter_label"
-                style="@style/AppTheme.Toolbar.Title"
                 android:text="@string/filters" />
 
             <TextView
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorText"
+                android:textSize="17sp"
+                android:layout_marginEnd="16dp"
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/nearby_filter_done_btn"
-                style="@style/AppTheme.Toolbar.TextLeft"
                 android:text="@string/done" />
 
+            <ProgressBar
+                android:visibility="gone"
+                android:id="@+id/nearby_filter_pb"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="16dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"/>
+
             <TextView
-                android:fontFamily="sans-serif-light"
                 android:id="@+id/nearby_filter_clear_btn"
-                style="@style/AppTheme.Toolbar.TextRight"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/colorText"
+                android:textSize="17sp"
+                android:fontFamily="sans-serif-light"
                 android:text="@string/clear"
                 />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.appcompat.widget.Toolbar>
 
