--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -76,6 +76,7 @@
                 android:backgroundTint="@android:color/white"
                 android:layout_marginHorizontal="12dp"
                 android:hint="@string/mail"
+                android:maxLines="1"
                 android:textColorHint="#60FFFFFF"
                 android:id="@+id/signup_mail"
                 android:textColor="@android:color/white"
@@ -90,6 +91,7 @@
                 android:backgroundTint="@android:color/white"
                 android:layout_marginHorizontal="12dp"
                 android:hint="@string/username_email"
+                android:maxLines="1"
                 android:textColorHint="#60FFFFFF"
                 android:id="@+id/signin_mail_username"
                 android:textColor="@android:color/white"
@@ -123,6 +125,7 @@
                 android:id="@+id/signup_identifiant"
                 android:textColorHint="#60FFFFFF"
                 android:textSize="14sp"
+                android:maxLines="1"
                 app:layout_constraintTop_toBottomOf="@id/identifiant_label"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="match_parent"
@@ -148,6 +151,7 @@
                 android:layout_marginHorizontal="12dp"
                 android:hint="@string/password"
                 android:textSize="14sp"
+                android:maxLines="1"
                 android:inputType="textPassword"
                 android:textColorHint="#60FFFFFF"
                 android:textColor="@android:color/white"
@@ -168,6 +172,7 @@
                 android:textColorHint="#60FFFFFF"
                 android:textColor="@android:color/white"
                 android:id="@+id/signin_password"
+                android:maxLines="1"
                 app:layout_constraintTop_toBottomOf="@id/signup_password_label"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_width="match_parent"
