--- a/app/src/main/res/layout/fragment_create_timenote.xml
+++ b/app/src/main/res/layout/fragment_create_timenote.xml
@@ -326,8 +326,9 @@
                 android:layout_height="wrap_content">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:padding="16dp"
                     android:layout_width="match_parent"
+                    android:paddingHorizontal="16dp"
+                    android:paddingTop="16dp"
                     android:layout_height="wrap_content">
 
                     <TextView
@@ -338,6 +339,7 @@
                         android:textColor="@color/colorText"
                         android:textSize="14sp"
                         android:text="@string/when"
+                        android:paddingBottom="16dp"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         android:layout_width="wrap_content"
@@ -347,21 +349,20 @@
                         android:visibility="gone"
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/profile_add_end_date"
-                        android:layout_marginTop="8dp"
                         android:text="@string/add_end_date"
                         android:textSize="14sp"
                         android:paddingTop="8dp"
+                        android:paddingBottom="16dp"
                         android:textColor="@android:color/darker_gray"
                         app:layout_constraintTop_toBottomOf="@id/when_label"
                         app:layout_constraintStart_toStartOf="@id/when_label"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"/>
 
                     <TextView
                         android:visibility="gone"
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/from_label"
-                        android:layout_marginTop="8dp"
                         android:text="@string/from"
                         android:textSize="14sp"
                         android:textColor="@color/colorText"
@@ -377,6 +378,7 @@
                         android:layout_marginTop="8dp"
                         android:text="@string/to"
                         android:textSize="14sp"
+                        android:paddingBottom="16dp"
                         android:textColor="@color/colorText"
                         app:layout_constraintTop_toBottomOf="@id/from_label"
                         app:layout_constraintEnd_toEndOf="@id/when_label"
@@ -387,11 +389,10 @@
                         android:visibility="gone"
                         android:fontFamily="sans-serif-light"
                         android:id="@+id/create_timenote_from"
-                        android:layout_marginTop="8dp"
                         tools:text="14 Janvier 2020"
                         android:textColor="@color/colorText"
                         android:textSize="14sp"
-                        app:layout_constraintTop_toBottomOf="@id/when_label"
+                        app:layout_constraintTop_toTopOf="@id/from_label"
                         app:layout_constraintEnd_toEndOf="parent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -418,7 +419,6 @@
                         tools:text="27, jun 2020"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toTopOf="@id/when_label"
-                        app:layout_constraintBottom_toBottomOf="@id/when_label"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
 
