--- a/app/src/main/res/layout/item_comment.xml
+++ b/app/src/main/res/layout/item_comment.xml
@@ -14,11 +14,13 @@
         android:id="@+id/comment_user_pic_imageview"
         android:layout_height="36dp"/>
 
-    <TextView
+    <com.hendraanggrian.appcompat.widget.SocialTextView
         android:fontFamily="sans-serif-light"
         android:id="@+id/comment_username_comment"
         android:layout_marginStart="8dp"
         android:textSize="13sp"
+        app:socialFlags="mention"
+        app:mentionColor="@color/colorEndGradient"
         android:textColor="@color/colorText"
         tools:text="Ronny Dahan"
         app:layout_constraintEnd_toStartOf="@id/comment_more"
