--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -27,6 +27,10 @@
         <attr name="eiv_padding" format="dimension"/>
     </declare-styleable>
 
+    <declare-styleable name="SocialViewStyle">
+        <attr name="socialViewStyle" format="reference" />
+    </declare-styleable>
+
     <declare-styleable name="UICalendar">
 
         <attr name="showWeek" format="boolean" />
