--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,6 +9,7 @@
     tools:context=".view.searchFlow.Search">
 
     <com.dayzeeco.dayzee.androidView.materialsearchbar.MaterialSearchBar
+        android:visibility="visible"
         android:paddingHorizontal="8dp"
         android:paddingVertical="16dp"
         app:mt_roundedSearchBarEnabled="true"
