--- a/app/src/main/res/layout-sw380dp/fragment_detailed_fragment.xml
+++ b/app/src/main/res/layout-sw380dp/fragment_detailed_fragment.xml
@@ -153,6 +153,19 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:visibility="gone"
+        android:background="@color/colorBackground"
+        tools:listitem="@layout/item_user"
+        android:id="@+id/detailed_timenote_rv"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        app:layout_constraintBottom_toTopOf="@+id/fragment_detailed_comment_ll"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/detailed_timenote_ll"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
